Add turbo frame for in-page editing

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit</h1>
 
-<div id="<%= dom_id @task %>">
+<turbo-frame id="<%= dom_id @task %>" class="block">
   <%= render "form", task: @task %>
   <%= link_to "Cancel", tasks_path, class: "btn mb-3 bg-gray-100" %>
-</div>
+</turbo-frame>
